objects/ESC_Case_Form_Extension_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>Payer_Customer_Class__c</fullName>
        <label>Payer Customer Class</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A-INSERTER</fullName>
                </value>
                <value>
                    <fullName>B-PRIORITY</fullName>
                </value>
                <value>
                    <fullName>C-LAW SCHOOL</fullName>
                </value>
                <value>
                    <fullName>D-SO-RENEWAL/REVESION</fullName>
                </value>
                <value>
                    <fullName>E-NON INSERTER</fullName>
                </value>
                <value>
                    <fullName>F-DO NOT BILL</fullName>
                </value>
                <value>
                    <fullName>G-AO 2</fullName>
                </value>
                <value>
                    <fullName>H- SPECIAL OFFER 1</fullName>
                </value>
                <value>
                    <fullName>I- SPECIAL OFFER 2</fullName>
                </value>
                <value>
                    <fullName>J- IRS</fullName>
                </value>
                <value>
                    <fullName>K -FEDLIB 1</fullName>
                </value>
                <value>
                    <fullName>L- FEDLIB 2</fullName>
                </value>
                <value>
                    <fullName>M- FEDLIB 3</fullName>
                </value>
                <value>
                    <fullName>N- FEDLIB 4</fullName>
                </value>
                <value>
                    <fullName>P- SPECIAL AUTO</fullName>
                </value>
                <value>
                    <fullName>Q - SO-NEW</fullName>
                </value>
                <value>
                    <fullName>R - SO BUNDLES</fullName>
                </value>
                <value>
                    <fullName>S - MANUAL BILLING</fullName>
                </value>
                <value>
                    <fullName>T - FORCED OUTPUT</fullName>
                </value>
                <value>
                    <fullName>Y - FINAL RUN</fullName>
                </value>
                <value>
                    <fullName>Z - CP INPUT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Per_Line__c</fullName>
        <label>Per Line</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan__c</fullName>
        <label>Plan</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Banded</fullName>
                </value>
                <value>
                    <fullName>Per User</fullName>
                </value>
                <value>
                    <fullName>Seat</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pricing_Type__c</fullName>
        <label>Pricing Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Multi_Year_Pricinig_in_Effect__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Annual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pro_Rated_Amount__c</fullName>
        <label>Pro-Rated Amount</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pro_Rated_Begin_mm_dd_yyyy__c</fullName>
        <label>Pro-Rated Begin (mm/dd/yyyy)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pro_Rated_End_mm_dd_yyyy__c</fullName>
        <label>Pro-Rated End (mm/dd/yyyy)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product_Price_Product_To_Add__c</fullName>
        <label>Product Price (Correct Product To Add)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Price__c</fullName>
        <label>Product Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Westlaw</fullName>
                </value>
                <value>
                    <fullName>Print/CD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_to_Replace_Full_Service__c</fullName>
        <label>Product to Replace Full Service</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_to_Replace_Subscription__c</fullName>
        <label>Product to Replace Subscription</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_for_Exchange__c</fullName>
        <label>Reason for Exchange</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Action_Required__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Left Firm</fullName>
                </value>
                <value>
                    <fullName>Lapse Full Subscription</fullName>
                </value>
                <value>
                    <fullName>Lapse Password Only</fullName>
                </value>
                <value>
                    <fullName>Change Practice Area</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ref_key_1__c</fullName>
        <label>Ref key 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Contact_ID_FS__c</fullName>
        <label>SAP Contact ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Contact_ID_LSI__c</fullName>
        <label>SAP Contact ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Contact_ID_LT__c</fullName>
        <label>SAP Contact ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Contact_ID_PI__c</fullName>
        <label>SAP Contact ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Contact_ID_ProDoc__c</fullName>
        <label>SAP Contact ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Contact_ID_SO__c</fullName>
        <label>SAP Contact ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Select_Plan__c</fullName>
        <label>Select Plan</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Per User</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Select_Plan_eBookLapse__c</fullName>
        <label>Select Plan</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Per User</fullName>
                    <default>true</default>
                    <label>Per User</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Item_Number__c</fullName>
        <label>Sub Item Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_Material_Description_Lapse__c</fullName>
        <label>Subscription Material Description(Lapse)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_Material_Description__c</fullName>
        <label>Subscription Material Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_Material_Number__c</fullName>
        <label>Subscription Material Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_Material_Product_to_Add__c</fullName>
        <label>Subscription Material #(Product to Add)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_Material_Product_to_Lapse__c</fullName>
        <label>Subscription Material#(Product to Lapse)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_Material__c</fullName>
        <label>Subscription Material #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_Name__c</fullName>
        <label>Subscription Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_Only__c</fullName>
        <label>Subscription Only</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>USL_Assignment_Number__c</fullName>
        <label>Assignment #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USL_CAllocationNumber__c</fullName>
        <label>CAllocationNumber</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USL_CAmount__c</fullName>
        <label>CAmount</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USL_CBilling_Date__c</fullName>
        <label>CBilling Date</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USL_CClearingDate__c</fullName>
        <label>CClearingDate</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USL_CClearing_DocNumber__c</fullName>
        <label>CClearing DocNumber</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USL_CDocType__c</fullName>
        <label>CDocType</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USL_CInvoice_Number__c</fullName>
        <label>CInvoice Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USL_CNetArrers__c</fullName>
        <label>CNetArrers</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USL_CRefNumber__c</fullName>
        <label>CRefNumber</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USL_CShortDescription__c</fullName>
        <label>CShortDescription</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USL_Credit_Debit_Indicator__c</fullName>
        <label>Credit Debit Indicator</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USL_Credit_or_Debit__c</fullName>
        <label>Credit or Debit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Credit</fullName>
                </value>
                <value>
                    <fullName>Debit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>USL_Input_Amount__c</fullName>
        <label>Input Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>USL_InvListNumber__c</fullName>
        <label>Invoice List #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USL_Invoice_Type__c</fullName>
        <label>Invoice Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USL_LineItemType__c</fullName>
        <description>Used in USL_AccLevelPwdForm to differentiate the lineitems of different sections</description>
        <label>LineItemType</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Westlaw Concurrent Access</fullName>
                </value>
                <value>
                    <fullName>Westlaw Folder Sharing</fullName>
                </value>
                <value>
                    <fullName>Westlaw Link Translation</fullName>
                </value>
                <value>
                    <fullName>Westlaw LSI Web Import</fullName>
                </value>
                <value>
                    <fullName>Westlaw ProDoc Web Import</fullName>
                </value>
                <value>
                    <fullName>Westlaw Plan Icons</fullName>
                </value>
                <value>
                    <fullName>Westlaw Skip Out of Plan</fullName>
                </value>
                <value>
                    <fullName>Access Control_Other</fullName>
                    <isActive>false</isActive>
                    <label>Access Control_Other</label>
                </value>
                <value>
                    <fullName>Folder Billing Option</fullName>
                    <isActive>false</isActive>
                    <label>Folder Billing Option</label>
                </value>
                <value>
                    <fullName>Max Concurrent Access</fullName>
                    <isActive>false</isActive>
                    <label>Max Concurrent Access</label>
                </value>
                <value>
                    <fullName>Preferences_Other</fullName>
                    <isActive>false</isActive>
                    <label>Preferences_Other</label>
                </value>
                <value>
                    <fullName>Print Bill Options</fullName>
                    <isActive>false</isActive>
                    <label>Print Bill Options</label>
                </value>
                <value>
                    <fullName>Usage Billing Options</fullName>
                    <isActive>false</isActive>
                    <label>Usage Billing Options</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>USL_OAmount__c</fullName>
        <label>OAmount</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USL_OBaseline_Date__c</fullName>
        <label>OBaseline Date</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USL_ODocNumber__c</fullName>
        <label>ODocNumber</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USL_ODocType__c</fullName>
        <label>ODocType</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USL_ONetArrears__c</fullName>
        <label>ONetArrears</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USL_OShortDescription__c</fullName>
        <label>OShortDescription</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USL_SAP_Contact_ID_CA__c</fullName>
        <label>SAP Contact ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USL_Type_of_Charge__c</fullName>
        <label>Type of Charge</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Legacy</fullName>
                </value>
                <value>
                    <fullName>Westlaw</fullName>
                </value>
                <value>
                    <fullName>Non Westlaw</fullName>
                </value>
                <value>
                    <fullName>Westlaw Tax</fullName>
                </value>
                <value>
                    <fullName>Non-Westlaw Tax</fullName>
                </value>
                <value>
                    <fullName>Non-Westlaw Transportation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>USL_User_s_Name_CA__c</fullName>
        <label>User&apos;s Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Name_Product_to_Add__c</fullName>
        <label>User Name(Correct Product to Add)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Name_Product_to_Lapse__c</fullName>
        <label>User Name(Product to Lapse)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Name__c</fullName>
        <label>User Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_s_Name_FS__c</fullName>
        <label>User&apos;s Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_s_Name_LT__c</fullName>
        <label>User&apos;s Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_s_Name_PI__c</fullName>
        <label>User&apos;s Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_s_Name_ProDoc__c</fullName>
        <label>User&apos;s Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_s_Name_SO__c</fullName>
        <label>User&apos;s Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Users_Name_LSI__c</fullName>
        <label>User&apos;s Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ZB_Acct_Number__c</fullName>
        <label>ZB Acct Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zw_Acct_Number__c</fullName>
        <label>ZW Acct Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subscription_material_description_Add__c</fullName>
        <label>Subscription Material Description(Add)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Case Form Extension Line Item</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ESC_Percent_of_Discount__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Case Extension Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Form Extension Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>